# causal-tcrs

./: .gitignore  LICENSE  README.md  example.ipynb  example.sh  pyproject.toml  setup.py
CausalReceptors/: dataloader.py  distributions.py  elbos.py  layers.py  manager.py  metrics.py  select_outcome_model.py  semisynthetic.py  test_layers.py
scripts/application/: README.md  Snyder_2020_MIRA_effect_analysis.ipynb  Snyder_2020_MIRA_effect_summary.ipynb  cross_validate.py  cross_validate.sh  cross_validate_attention.sh  cross_validate_noselect.sh  cross_validate_simple.sh
scripts/preprocess/: README.md  preprocess_emerson.py  preprocess_emerson.sh  preprocess_igor.py  preprocess_snyder.py  preprocess_snyder.sh  preprocess_snyder_mira.py  preprocess_snyder_mira.sh  preprocess_snyder_patch.py  preprocess_snyder_patch.sh
scripts/semisynthetic/: README.md  Semisynthetic_analysis.ipynb  hyper_optimization.py  semisynthetic_sweep.py
scripts/semisynthetic/class/: sweep_class.sh  sweep_experiment_class.ini  sweep_model_class.ini
scripts/semisynthetic/inject_rate/: sweep_experiment_inject_rate.ini  sweep_inject_rate.sh
scripts/semisynthetic/strength/: sweep_experiment_strength.ini  sweep_strength.sh
src/CausalReceptors/: distributions.py  elbos.py  layers.py  select_outcome_model.py  semisynthetic.py  test_layers.py
