[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CausalReceptors"
version = "2024-06"
dependencies = [
    "aim~=3.18.1",
    "h5py~=3.7",
    "numpy~=1.24.3",
    "pandas~=1.5.3",
    "plotly~=5.16.0",
    "pyro-ppl~=1.8.4",
    "randomname~=0.2.1",
    "scikit-learn~=1.2.2",
    "torch~=2.0.1"
]
requires-python = "~=3.11.7"
authors = [
    {name = "Eli N. Weinstein", email = "eli.n.weinstein@gmail.com"}
]
description = "Estimating the causal effects of T cell receptors."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["biological-sequences", "proteins", "probabilistic-models",
            "machine-learning", "immunology", "causal-inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = ["pytest~=7.3.1"]
pre = ["biopython~=1.81",
       "chardet~=5.1.0"]
synth = ["ax-platform~=0.3.4",
         "jupyterlab~=4.0.8"]
covid = []

[project.urls]
Repository = "https://github.com/EWeinstein/causal-tcrs"